# seeker

./: .gitignore  Cargo.toml  README.md  docker-compose-cassandra.yaml  docker-compose-kafka.yaml  docker-compose.yaml  go.mod
.github/workflows/: build.yml
app/components/: page.tsx
app/pages/: connect.tsx  groups.tsx  index.tsx
proto/admin/v1/: service.proto
scripts/: migrations.cql
seeker/: Cargo.toml
seeker-app/components/: toolbar.cluster.picker.tsx
seeker-webapp/: README.md  package-lock.json  package.json
seeker-webapp/components/: page.tsx  sidebar.tsx  toolbar.tsx
seeker-webapp/types/app/: navigation.ts
seeker/src/: id.rs  lib.rs  logger.rs  macros.rs  server.rs  session.rs  version.rs
seeker/src/clusters/: cluster.rs  mod.rs  store.rs
seeker/src/clusters/endpoints/: v1.rs
seekr/: Cargo.toml  build.rs
seekr-app/: package-lock.json  package.json
seekr-app/components/: toolbar.tsx
seekr-app/pages/: _app.tsx  schemas.tsx  topics.tsx
seekr/src/: error.rs  errors.rs  indexer.rs  lib.rs  logger.rs  server.rs  shutdown.rs
seekr/src/clusters/: cluster.rs  store.rs
seekr/src/clusters/endpoints/: v1.rs
seekr/src/kafka/: metadata.rs  mod.rs
seekr/src/kafka/metadata/: consumer.rs  manager.rs  mod.rs  service.rs
seekr/src/kafka/streams/: consumer.rs  mod.rs  service.rs
seekr/src/subscriptions/: mod.rs  store.rs  subscription.rs
seekr/src/subscriptions/endpoints/: v1.rs
