[package]
name = "seekr"
version = "1.0.0-beta"
edition = "2021"
publish = true
authors = ["Kyle Thompson <kyle@seekr.io>"]
default-run = "seekrd"

[[bin]]
name = "seekrd"
path = "src/bin/seekrd.rs"

[dependencies]
actix-web = "4"
async_once = "0.2.6"
async-trait = "0.1.56"
base64 = "0.13.0"
bytes = "1.2.1"
cdrs-tokio = "6.2.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.23", features = ["env", "derive"] }
env_logger = "0.10.0"
error-chain = "0.12.4"
fern = { version = "0.6.1", features = ["colored"] }
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
meilisearch-sdk = "0.21.2"
rdkafka = "0.13.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
